<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="url">http://kidsmentory.co.kr:1050/</string>
    <string name="image_url">http://static.kidsmentory.co.kr/photos/</string>
    <string name="default_profile_url">http://static.kidsmentory.co.kr/</string>
    <string name="profile_url">http://static.kidsmentory.co.kr/profile/</string>
    <string name="app_name">키즈멘토리</string>
    <string name="action_settings">Settings</string>
    <string name="login">로그인</string>
    <string name="login_automatically">자동 로그인</string>
    <string name="invite_friend">친구 초대하기</string>
    <string name="invite_teacher">선생님 초대하기</string>
    <string name="register">가입</string>
    <string name="register_full">가입하기</string>
    <string name="member_register">회원가입</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="select_registermode">가입하시는 분은 누구신가요?</string>
    <string name="register_parent">학부모</string>
    <string name="register_family">가족</string>
    <string name="register_teacher">선생님</string>
    <string name="register_orgmaster">원장선생님</string>
    <string name="register_name">성명</string>
    <string name="register_nickname">닉네임</string>
    <string name="register_phone">전화번호</string>
    <string name="register_children">자녀정보</string>
    <string name="register_org">기관명</string>
    <string name="register_orglocation">기관 위치</string>
    <string name="register_orgcode">기관 코드</string>
    <string name="register_newclass">새 반 이름</string>
    <string name="register_newclassage">새 반 연령</string>
    <string name="register_find_org">기관 검색</string>
    <string name="register_find_orglocation">기관 위치 검색</string>
    <string name="register_invite_teacher">선생님 초대하기</string>
    <string name="register_invite_parent">학부모 초대하기</string>
    <string name="location_not_found">검색된 주소 없음</string>
    <string name="newsfeed">뉴스피드</string>
    <string name="notice">알림</string>
    <string name="confirm">확인</string>
    <string name="close">닫기</string>
    <string name="finish">완료</string>
    <string name="invite">초대하기</string>
    <string name="invite_short">초대</string>
    <string name="select">선택</string>
    <string name="modify">수정</string>
    <string name="move">이동</string>
    <string name="later">나중에</string>
    <string name="photo">사진</string>
    <string name="post">게시</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="day">일</string>
    <string name="week">주</string>
    <string name="month">월</string>
    <string name="year">년</string>
    <string name="birthday">생일</string>
    <string name="first_week">첫째주</string>
    <string name="second_week">둘째주</string>
    <string name="third_week">셋째주</string>
    <string name="fourth_week">넷째주</string>
    <string name="fifth_week">다섯째주</string>
    <string name="sixth_week">여섯째주</string>
    <string name="register">등록</string>
    <string name="move_photo">사진 이동</string>
    <string name="select_photo">사진 선택</string>
    <string name="delete_photo">사진 삭제</string>
    <string name="upload_photo">사진 올리기</string>
    <string name="select_album">사진첩 선택</string>
    <string name="make_new_album">새 사진첩 추가</string>
   	<string name="tag_all">태그 전체 적용</string> 
    <string name="scrap_album">스크랩 폴더</string>
    <string name="tagged_album">내가 태그된 사진</string>
    <string name="recommend_mentory">추천하기</string>
	<string name="profile_select_photo">프로필 사진 선택</string>
    <string name="profile_childname">팥쥐</string>
    <string name="profile_parentname">김미정</string>
    <string name="profile_class">햇님반</string>
    <string name="profile_seechildren">자녀보기</string>
    <string name="profile_seeclass">반 보기</string>
    <string name="profile_seefriend">친구보기</string>
    <string name="profile_addchildren">자녀 추가하기</string>
    <string name="profile_addclass">반 추가하기</string>
    <string name="profile_manager">원장님</string>
    <string name="profile_teacher">선생님</string>
    <string name="news_text">님이 새로운 사진을 추가하였습니다.</string>
    <string name="news_numoflike">0</string>
    <string name="news_numofreply">1</string>
    <string name="news_numofscrap">99+</string>
    <string name="news_like">좋아요</string>
    <string name="news_likecancel">좋아요취소</string>
    <string name="news_reply">댓글</string>
    <string name="news_scrap">스크랩</string>
    <string name="news_donescrap">스크랩됨</string>
    <string name="reply_likelist">좋아하는 사람들</string>
    <string name="notice_text">콩쥐의 담임 선생님께서 새로운 \'육아팁\'을 추천하셨습니다. </string>
    <string name="notice_timelog">10분전</string>
    <string name="photonotice_text">콩쥐의 담임 선생님께서 \'기관\'사진첩에 새로운 사진을 추가하셨습니다. </string>
    <string name="photonotice_timelog">15분전</string>
    <string name="friend_namecab">네임캡</string>
    <string name="friend_friendname">김철수</string>
    <string name="friend_friendcall">친구신청</string>
    <string name="friend_alreadyfriend">친구</string>
    <string name="friend_requested">요청 중</string>
    <string name="friend_accept">수락</string>
    <string name="friend_deny">거절</string>
    <string name="friend_approve">승인</string>
    <string name="friend_delete_student">원생삭제</string>
    <string name="friend_delete_teacher">권한끊기</string>
    <string name="friend_verified_teacher">인증됨</string>
    <string name="schedule_show_confirmed_list">확인\n리스트\n보기</string>
    <string name="gallery_seeallphoto">전체 보기</string>
    <string name="gallery_seetaggedphoto">내가 태그된 사진</string>
    <string name="gallery_seeallfriend">전체 보기</string>
    <string name="gallery_seetaggedfriend">태그된 친구만 보기</string>
    <string name="gallery_seeprivate">나만 보기</string>
    <string name="gallery_tagmessage">태그하려면 사진을 탭하세요.</string>
    <string name="gallery_albumsetting">앨범 설정</string>
    <string name="mentory_total">전체</string>
    <string name="mentory_manage">운영</string>
    <string name="mentory_edu">교육</string>
    <string name="mentory_infant">육아</string>
    <string name="mentory_healing">힐링</string>
    <string name="mentory_kidsmnews">키즈엠소식</string>
    <string name="mentory_scrap">스크랩</string>
    <string name="mentory_recommend">선생님 추천멘토</string>
    <string name="menu_dobutton_text">기능</string>
	<string name="hint_email">E-mail 아이디</string>
	<string name="hint_password">비밀번호</string>
	<string name="hint_confirmpassword">비밀번호 확인</string>
	<string name="hint_org">기관명</string>
	<string name="hint_class">반</string>
	<string name="hint_childname">자녀 이름</string>
	<string name="hint_birthday">생년월일 예)081026</string>
	<string name="hint_put_orgname">원명을 입력해주세요</string>
	<string name="hint_put_dong">동 이름 입력 예)정자동</string>
	<string name="hint_put_invite_teacher_name">이름을 입력해서 찾을 수 있습니다.</string>
	<string name="hint_parent_name">부모님 명</string>
	<string name="hint_parent_nickname">사용할 닉네임</string>
	<string name="hint_parent_phone">휴대폰 번호</string>
	<string name="hint_teacher_name">선생님 명</string>
	<string name="hint_teacher_phone">휴대폰 번호</string>
	<string name="hint_teacher_orgcode">코드 입력</string>
	<string name="hint_manager_name">원장님 명</string>
	<string name="hint_manager_phone">휴대폰 번호</string>
	<string name="hint_manager_orgname">유치원/어린이집</string>
	<string name="hint_manager_orglocation">유치원/어린이집 주소</string>
	<string name="hint_manager_specific_orglocation">상세 주소</string>
	<string name="register_infotaker_invite_guide_manager">초대할 선생님을 모두 선택해주세요</string>
	<string name="register_infotaker_invite_guide_not_manager">초대할 대상을 모두 선택해주세요</string>
	<string name="guide_register_manager_program">키즈엠에서 제공하는 프로그램이 있으신가요?</string>
	<string name="guide_recommeded_message">께서 멘토리를 추천하셨습니다.</string>
   	<string name="default_content_description"></string>
	<string name="default_string">기본</string>
	
	
	<string name="friendactivity">친구보기</string>
    <string name="newsfeedactivity">홈</string>
    <string name="scheduleactivity">스케줄</string>
    <string name="galleryactivity">사진첩</string>
    <string name="mentoryactivity">멘토리</string>
    <string name="busInfoactivity">등원도우미</string>
    <string name="pointactivity">포인트</string>
    <string name="settingsactivity">설정</string>
    <string name="noticeactivity">알림</string>
    <string name="photoactivity">사진</string>
    <string name="replyactivity">댓글</string>
    <string name="showimageactivity">이미지보기</string>
    <string name="albumactivity">사진들</string>
    <string name="uploadphotoactivity">사진 올리기</string>
    <string name="getalbumfromlocalactivity">갤러리 앨범</string>
    <string name="inputtagactivity">태그 입력</string>
    <string name="modifyimageactivity">사진 수정</string>
    <string name="loginactivity">로그인</string>
    <string name="registerinfotakeractivity"></string>
    <string name="showconfirmedlistactivity"></string>
    <string name="addscheduleactivity"></string>
    <string name="seementoryeactivity"></string>
    <string name="simplecamera"></string>
    <string name="addchildactivity">자녀 추가하기</string>
    <string name="doctypeerroractivity"></string>

    <string-array name="drawer_dolist">
        <item>홈</item>
        <item>사진첩</item>
        <item>스케줄</item>
        <item>등원도우미</item>
        <item>멘토리</item>
        <item>설정</item>
    </string-array>
    
    <string-array name="drawer_dolist_icon">
        <item>drawer_icon_feed</item>
        <item>drawer_icon_photo</item>
        <item>drawer_icon_cal</item>
        <item>drawer_icon_bus</item>
        <item>drawer_icon_mento</item>
        <item>drawer_icon_setting</item>
    </string-array>
    
    <string-array name="drawer_dolist_selected">
        <item>drawer_cell_feed_p</item>
        <item>drawer_cell_photo_p</item>
        <item>drawer_cell_cal_p</item>
        <item>drawer_cell_bus_p</item>
        <item>drawer_cell_mento_p</item>
        <item>drawer_cell_setting_p</item>
    </string-array>
    
    <string-array name="gallery_albumsettingmode">
        <item>앨범 이름 수정</item>
        <item>앨범 삭제</item>
    </string-array>
    
    <string-array name="gallery_uploadmode">
        <item>카메라 사용</item>
        <item>앨범에서 올리기</item>
    </string-array>
    
    <string-array name="profile_image_mode">
        <item>사진 촬영</item>
        <item>사진 앨범</item>
        <item>삭제</item>
        <item>취소</item>
    </string-array>
    
    <string-array name="register_teacher_classlevel">
        <item>7세 반</item>
        <item>6세 반</item>
        <item>5세 반</item>
        <item>4세 이하 반</item>
    </string-array>
    
    <string-array name="setting_mode">
        <item>개선사항 보내기</item>
    </string-array>
</resources>
