<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="120dp"
	    android:clickable="true"
	    android:gravity="center_vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	
	    <ImageView
	        android:contentDescription="@string/default_content_description"
	        android:id="@+id/mainpicture"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:layout_alignParentLeft="true"
	        android:layout_marginRight="5dip"
	        android:src="@drawable/ic_launcher" />
	
	    <TextView
	        android:id="@+id/profile_childname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignTop="@+id/mainpicture"
	        android:layout_toRightOf="@+id/mainpicture"
	        android:text="@string/profile_childname"
	        android:textSize="28sp" />
	
	    <TextView
	        android:id="@+id/profile_class"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/mainpicture"
	        android:layout_alignLeft="@+id/profile_parentname"
	        android:text="@string/profile_class"
	        android:textSize="20sp" />

	    <TextView
	        android:id="@+id/profile_parentname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/profile_childname"
	        android:layout_centerVertical="true"
	        android:text="@string/profile_parentname"
	        android:textSize="20sp" />
	    
	</RelativeLayout>