<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.44"
        android:background="#808080ff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/profile_picture"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_launcher"
                android:cropToPadding="true" />

            <TextView
                android:id="@+id/profile_parentname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/profile_picture"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/profile_picture"
                android:text="@string/profile_parentname"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/news_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/profile_picture"
                android:layout_below="@+id/profile_picture"
                android:layout_marginTop="15dp"
                android:bottom="@+id/profile_picture"
                android:text="@string/news_text"
                android:textSize="15sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/news_numoflike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/news_numoflike"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/news_numofreply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/news_numofreply"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/news_numofscrap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_numofscrap"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/news_like"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/news_like"
                    android:onClick="OnLikeClick" />

                <Button
                    android:id="@+id/news_reply"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/news_reply"
                    android:onClick="OnReplyClick" />

                <Button
                    android:id="@+id/news_scrap"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/news_scrap"
                    android:onClick="OnScrapClick" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>